--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,15 +9,12 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
- *
- *= require_tree .
- *= require_self
- *= require owl.carousel
- *= require owl.theme
  */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "owl.carousel";
+@import "owl.theme";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "styles";
+@import "import";
