--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -196,8 +196,9 @@ h1, h2, h3, h4, h5, h6 {
     color: $white;
     
     &:active {
-      background-color: $gray-dark;
-      color: $white;
+      background: none !important;
+      border-color: $white !important;
+      color: $white !important;
     }
 
     &:focus, &:hover {
